1. created signup page 2.created views 3.created sign up user view

--- a/templates/header.html
+++ b/templates/header.html
@@ -22,10 +22,22 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Tasks</a>
               </li>
-            </ul> 
+            </ul>
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sign Up</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Log In</a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
     
 </body>
 </html>
+
+{% block start%}
+
+{% endblock %}
