1.created super user and a normal user 2.Created login Page, its views,urls

--- a/templates/header.html
+++ b/templates/header.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'home' %}">Log In</a>
+                <a class="nav-link" href="{% url 'login' %}">Log In</a>
               </li>
             </ul>
           </div>
