--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,7 @@
 
 {% block start %}
 
-<div id="signup">
-  <form action="" method="">
-    <h3 id="heading">Please Log In</h3>
-    <br>  
-    <input type="email" class="input-control" placeholder="please enter email" name="email">
-    <br>
-    <input type="password" class="input-control" placeholder="please enter password" name="password">
-    <br>
-    <button class="btn btn-primary">Login</button>
-  </form>
-
-
+<div>
+  <h1>You need to sign up first and then login to create your todo</h1>
 </div>
 {% endblock %}
