--- a/templates/login.html
+++ b/templates/login.html
@@ -2,14 +2,14 @@
 
 {% block start %}
 
-<div id="signup">
-  <form action="" method="POST">
+<div id="signup" >
+  <form action="" method="POST" class="col-lg-5 shadow p-4 mx-auto">
   {% csrf_token %}
     <h3 id="heading">Please Log In</h3>
     <br>  
-    <input type="email" class="input-control" placeholder="please enter email" name="email">
+    <input type="email" class="form-control" placeholder="please enter email" name="email">
     <br>
-    <input type="password" class="input-control" placeholder="please enter password" name="password">
+    <input type="password" class="form-control" placeholder="please enter password" name="password">
     <br>
     <button class="btn btn-primary">Login</button>
   </form>
