--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,15 +3,15 @@
 {% block start %}
 
 <div id="signup">
-  <form action="" method="POST">
+  <form action="" method="POST" class="col-lg-5 shadow p-4 mx-auto">
   {% csrf_token %}
     <h3 id="heading">Please Sign Up</h3>
     <br>  
-    <input type="email" class="input-control" placeholder="please enter email" name="email">
+    <input type="email" class="form-control" placeholder="please enter email" name="email">
     <br>
-    <input type="password" class="input-control" placeholder="please enter password" name="password">
+    <input type="password" class="form-control" placeholder="please enter password" name="password">
     <br>
-    <input type="password" class="input-control" placeholder="please enter password again" name="password2">
+    <input type="password" class="form-control" placeholder="please enter password again" name="password2">
     <br>
     <button class="btn btn-primary">Sign Up</button>
   </form>
