1. Created a custom backend to login with email and password 2. Minor changes in templates

--- a/templates/login.html
+++ b/templates/login.html
@@ -7,9 +7,9 @@
   {% csrf_token %}
     <h3 id="heading">Please Log In</h3>
     <br>  
-    <input type="email" class="form-control" placeholder="please enter email" name="email">
+    <input type="email" class="form-control" placeholder="please enter email" name="email" required>
     <br>
-    <input type="password" class="form-control" placeholder="please enter password" name="password">
+    <input type="password" class="form-control" placeholder="please enter password" name="password" required>
     <br>
     <button class="btn btn-primary">Login</button>
   </form>
