--- a/templates/header.html
+++ b/templates/header.html
@@ -30,6 +30,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'login' %}">Log In</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
             </ul>
           </div>
         </div>
