--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,28 @@
 
 {% block start %}
 
-<div>
-  <h1>You need to sign up first and then login to create your todo</h1>
+<div >
+  <div class="container pt-2 pb-4">
+    <div class="row">
+      <div class="col-lg-4 mx-auto shadow p-0 mt-4">
+        <div class="p-2">
+          <h2>Add New Todo</h2>
+        </div>
+        <div class="p-4">
+          <form action="/add-todo/" method="POST">
+            {% csrf_token %}
+            {{form.as_p}}
+            <hr>
+            <button class="btn btn-primary">Add</button>
+          </form>
+        </div>  
+    </div>
+    <div class="col">
+      heysajdnsnmddddddddddddddd
+    </div>    
+    </div>
+  </div>
+    
 </div>
 
 
