--- a/templates/header.html
+++ b/templates/header.html
@@ -23,15 +23,20 @@
                 <a class="nav-link" href="#">Tasks</a>
               </li>
             </ul> -->
+            
             <ul class="navbar-nav ml-auto">
+              {% if request.user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+              {% else %}  
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
               </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'login' %}">Log In</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+              {% endif %}
             </ul>
           </div>
         </div>
