--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <div >
   <div class="container pt-2 pb-4">
-    <div class="row">
+    <div class="row border" >
       <div class="col-lg-4 mx-auto shadow p-0 mt-4">
         <div class="p-2">
           <h2>Add New Todo</h2>
@@ -19,7 +19,46 @@
         </div>  
     </div>
     <div class="col">
-      heysajdnsnmddddddddddddddd
+      <div>
+        <div>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Title</th>
+                <th>Status</th>
+                <th>Priority</th>
+                <th>Description</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              {% for task in tasks %}
+                <tr>
+                  <td>{{ forloop.counter }}</td>
+                  <td>{{ task.title }}</td>
+                  <td>
+                    {% if task.status == 'c' %}
+                    ✅
+                    {% else %}
+                    🕗</td>
+                    {% endif %}
+                  <td>{{ task.priority }}</td>
+                  <td>{{ task.description }}</td>
+                  <td><a href="/delete-task/{{ task.id }}" class="btn">🗑️</a>
+                    {% if task.status == 'p' %}
+                    <a href="/change-task/{{ task.id }}/c" class="btn">✅</a>
+                    {% else %}
+                    <a href="/change-task/{{ task.id }}/p" class="btn">🕗</a>
+                    {% endif %}
+                  </td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>    
     </div>
   </div>
